<resources>
    <string name="app_name">LockBox</string>
    <string name="app_logo">LockBox Logo</string>
    <string name="app_slogan">Secure storage.\nJust as long as needed.</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered"><u>Already have an account? Login here.</u></string>
    <string name="empty_field_error">Field cannot be empty</string>
    <string name="field_length_error">Not long enough</string>
    <string name="password_match_error">Password does not match</string>
    <string name="register_progress_message">Registering you</string>
    <string name="blank_in_text_error">Field cannot have blank spaces</string>
    <string name="username_exists_error">This username is already taken</string>
    <string name="registration_success">Successfully registered. Welcome to LockBox!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="not_registered"><u>Don\'t have an account? Create one here.</u></string>
    <string name="login_progress">Logging you in.</string>
    <string name="invalid_credentials">Invalid credentials entered</string>
    <string name="generic_error">An unknown error occurred.</string>
    <string name="login_success">Welcome back!</string>
    <string name="my_boxes">My Boxes</string>
    <string name="pending_checkin">Pending Checkins</string>
    <string name="popular_boxes">Public Boxes</string>
    <string name="box_name">Box name</string>
    <string name="add_files">Add Files</string>
    <string name="add_box">Add Box</string>
    <string name="frequency">Frequency</string>
    <string name="not_enough_files">Not enough files</string>
    <string name="adding_box">Adding box</string>
    <string name="add_box_failed">We are unable to add this box right now. Please try again later.</string>
    <string name="add_box_success">Added new box!</string>
    <string name="loading_boxes">Loading your boxes</string>
    <string name="deleting_box">Deleting Box</string>
    <string name="checkin_box">Checking in</string>
    <string name="checkin_box_success">Successfully checked in!</string>
    <string name="checkin_box_failed">An error occurred when checking in. Please try again later.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="default_notification_channel_id">lockbox_notification_channel</string>
    <string name="loading_pending_boxes">Loading boxes that need attention</string>
    <string name="loading_box_data">Loading box data</string>
    <string name="loading_unlocked_boxes">Loading unlocked boxes</string>
    <string name="box_checkin_frequency">%1$s\nCheck In</string>
    <string name="box_last_checkin_date">%1$s\nCreation Date</string>
    <string name="box_unlock_date">%1$s\nUnlock Date</string>
    <string name="box_owner_name">Owner: %1$s</string>
    <string name="box_view_owner">Owner:</string>
    <string name="box_view_creation_date">Creation Date:</string>
    <string name="box_view_last_checkin">Last Check in:</string>
    <plurals name="file_label">
        <item quantity="one">%1$s\nFile</item>
        <item quantity="other">%1$s\nFiles</item>
    </plurals>
</resources>
